--- a/Supermarket_data_exploration.ipynb
+++ b/Supermarket_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "3632825c-851d-4420-aa62-c6ec59c390cb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "5e008f30-d308-4782-9e13-5652f781bc95",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "eec865f1-e316-4a0f-b6cf-dee0d57862f0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "f2789ec5-3298-4bf5-8759-72f17812709b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "c8d0b6f0-ebc1-499d-97b3-58446e33ea24",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4  10:37      Ewallet  604.17                 4.761905       30.2085     5.3  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "4724e558-2ff1-4bfd-bd8d-787e8ecf343f",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "a8b6598e-8207-461d-af01-8439da4d8af0",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
        "max      993.00                     4.76         49.65    10.00  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c13f2970-dd38-4ae5-b5b9-f4eba621a7b0",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "0e4c35ac-bedc-447e-ba47-b5e6bfeef1ed",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7c119d12-eafc-4e92-9f89-526900065032",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "2  13:23  Credit card  324.31                 4.761905       16.2155     7.4  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "94a347cb-4ba3-47d4-8ced-a80005ad08e6",
    "metadata": {},
    "outputs": [
@@ -876,7 +876,7 @@
        "Name: gross margin percentage, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,9 +925,9 @@
    "source": [
     "<h3> Data : </h3> \n",
     "\n",
-    "* Do products of the same product line have the same unit price? \n",
+    "1. Do products of the same product line have the same unit price? \n",
     "\n",
-    "* Which City/ Branch sold the highest quantity of products? \n",
+    "2. Which City/ Branch sold the highest quantity of products? \n",
     "\n",
     "* Which City/Branch earned the highest gross income?\n",
     "\n",
@@ -972,6 +972,238 @@
     "\n",
     "* Member purchases over time"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c392b6b2-8281-4112-a618-cc768b5dcbf7",
+   "metadata": {},
+   "source": [
+    "## 1. Does products of the same product line have the same unit price?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9e0178fd-5fb5-4085-b419-2508f53fd718",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Unit price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Product line</th>\n",
+       "      <th>Unit price</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Electronic accessories</th>\n",
+       "      <th>10.56</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10.59</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11.81</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11.94</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12.05</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Sports and travel</th>\n",
+       "      <th>98.13</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98.40</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98.80</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99.24</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99.96</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>993 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   Unit price\n",
+       "Product line           Unit price            \n",
+       "Electronic accessories 10.56                1\n",
+       "                       10.59                1\n",
+       "                       11.81                1\n",
+       "                       11.94                1\n",
+       "                       12.05                1\n",
+       "...                                       ...\n",
+       "Sports and travel      98.13                1\n",
+       "                       98.40                1\n",
+       "                       98.80                1\n",
+       "                       99.24                1\n",
+       "                       99.96                1\n",
+       "\n",
+       "[993 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df.groupby([\"Product line\", \"Unit price\"])[[ \"Unit price\"]].count()\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ca20d143-b6a0-4a32-84ef-1afa29136329",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    986\n",
+       "2      7\n",
+       "Name: Unit price, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"Unit price\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "04b653d8-37ef-4ada-8732-99b8bc292cf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    99.0\n",
+       "2     1.0\n",
+       "Name: Unit price, dtype: float64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"Unit price\"].value_counts(normalize = True).round(2)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "6f465235-e6ed-40cd-8dad-caa057162e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method IndexOpsMixin.value_counts of Product line            Unit price\n",
+       "Electronic accessories  26.26         2\n",
+       "                        52.89         2\n",
+       "Fashion accessories     22.32         2\n",
+       "                        99.82         2\n",
+       "Home and lifestyle      34.42         2\n",
+       "                        78.38         2\n",
+       "Sports and travel       45.58         2\n",
+       "Name: Unit price, dtype: int64>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.loc[df2[\"Unit price\"] > 1][\"Unit price\"].value_counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d734810d-b373-4ee4-8910-5da3ed82574a",
+   "metadata": {},
+   "source": [
+    "1. Products of the same product line have different prices. >> One product line does not represent one product.\n",
+    "\n",
+    "2. Since each invoice only has one unit price, all extracted invoices are of monotypic product sales.\n",
+    "\n",
+    "2. In the selected dataset 99% of the products have unique unit prices. Only 1% are repeated prices. \n",
+    "\n",
+    "3. Since most items have unique unit prices one could say for each unique product most of the time (99% of the time)only one invoice was extracted from sales of that specific product. \n",
+    "\n",
+    "4. ??There is a possibility that *all* of the products in the dataset are unique and the 1% of the time where the unit price is repeated may be due to more than one product bearing the same price.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b61b10c3-81d7-4519-a7f8-a34b85559f0c",
+   "metadata": {},
+   "source": [
+    "## 2. Which City/ Branch sold the highest quantity of products? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c0c1fa-699a-4a4f-9a9c-fdd36b32da26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
