--- a/Supermarket_data_exploration.ipynb
+++ b/Supermarket_data_exploration.ipynb
@@ -1294,6 +1294,7 @@
    "cell_type": "markdown",
    "id": "b61b10c3-81d7-4519-a7f8-a34b85559f0c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1495,6 +1496,7 @@
    "cell_type": "markdown",
    "id": "86351f3e-36de-4588-9e27-0f8c0a0b9ca4",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1738,7 +1740,10 @@
   {
    "cell_type": "markdown",
    "id": "2b1b426f-a8e4-48eb-a861-f4263f4aacd8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## 4. Gross income by product line"
    ]
@@ -1913,7 +1918,10 @@
   {
    "cell_type": "markdown",
    "id": "53b63c70-ae7c-4b56-a392-4eca516f5e2e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## 5. Gross income by product line by City/Branch "
    ]
@@ -2223,6 +2231,7 @@
    "cell_type": "markdown",
    "id": "1433226e-8115-4351-898d-7267522c5eeb",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
