minor update to .ipynb file

--- a/Supermarket_data_exploration.ipynb
+++ b/Supermarket_data_exploration.ipynb
@@ -2491,7 +2491,7 @@
    "id": "c910c3e9-27df-4778-8fc6-c5b8c5e0ec38",
    "metadata": {},
    "source": [
-    "* There is relatively low amount of revenue compared to Ewallet and Cash. About 3% less"
+    "* There is relatively low amount of credit card revenue compared to Ewallet and Cash. About 3% less"
    ]
   },
   {
