--- a/Supermarket_data_exploration.ipynb
+++ b/Supermarket_data_exploration.ipynb
@@ -782,7 +782,6 @@
    "cell_type": "markdown",
    "id": "afb4e32d-4121-48df-80de-a30da7afa375",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1064,7 +1063,6 @@
    "cell_type": "markdown",
    "id": "c392b6b2-8281-4112-a618-cc768b5dcbf7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2665,6 +2663,7 @@
    "cell_type": "markdown",
    "id": "aa3c984b-4921-44cb-b5fa-68064afe8de2",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3095,6 +3094,7 @@
    "cell_type": "markdown",
    "id": "d50b4fda-100d-4698-968f-222dfcff1d29",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -5479,6 +5479,7 @@
    "cell_type": "markdown",
    "id": "d5791a41-6e53-4eab-877b-cd4d537f6e03",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -6169,14 +6170,17 @@
   {
    "cell_type": "markdown",
    "id": "b1468b4d-a0cb-4bc1-b7e0-76b2d5fc5a29",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Exploring the record uniqueness: Extension of Q1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "0e5ac50b-fac2-49e1-bf15-b47fcb554038",
    "metadata": {},
    "outputs": [
@@ -6209,6 +6213,14 @@
     "\n",
     "* \"Product line\",\"Unit price\",\"Branch\",\"Payment\",\"Customer type\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8442972-2462-43a7-bfc8-1ded32ccd93a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
