describe without non-numeric fields

--- a/Supermarket_data_exploration.ipynb
+++ b/Supermarket_data_exploration.ipynb
@@ -337,19 +337,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Invoice ID</th>\n",
-       "      <th>Branch</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Customer type</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Product line</th>\n",
        "      <th>Unit price</th>\n",
        "      <th>Quantity</th>\n",
        "      <th>Tax 5%</th>\n",
        "      <th>Total</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>Payment</th>\n",
        "      <th>cogs</th>\n",
        "      <th>gross margin percentage</th>\n",
        "      <th>gross income</th>\n",
@@ -359,99 +350,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
        "      <td>1000.00</td>\n",
        "      <td>1000.00</td>\n",
        "      <td>1000.00</td>\n",
        "      <td>1000.00</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
        "      <td>1000.00</td>\n",
        "      <td>1000.00</td>\n",
        "      <td>1000.00</td>\n",
        "      <td>1000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>89</td>\n",
-       "      <td>506</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>750-67-8428</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Yangon</td>\n",
-       "      <td>Member</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Fashion accessories</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2/7/2019</td>\n",
-       "      <td>19:48</td>\n",
-       "      <td>Ewallet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>1</td>\n",
-       "      <td>340</td>\n",
-       "      <td>340</td>\n",
-       "      <td>501</td>\n",
-       "      <td>501</td>\n",
-       "      <td>178</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20</td>\n",
-       "      <td>7</td>\n",
-       "      <td>345</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>55.67</td>\n",
        "      <td>5.51</td>\n",
        "      <td>15.38</td>\n",
        "      <td>322.97</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>307.59</td>\n",
        "      <td>4.76</td>\n",
        "      <td>15.38</td>\n",
@@ -459,19 +372,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>26.49</td>\n",
        "      <td>2.92</td>\n",
        "      <td>11.71</td>\n",
        "      <td>245.89</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>234.18</td>\n",
        "      <td>0.00</td>\n",
        "      <td>11.71</td>\n",
@@ -479,19 +383,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>10.08</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.51</td>\n",
        "      <td>10.68</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>10.17</td>\n",
        "      <td>4.76</td>\n",
        "      <td>0.51</td>\n",
@@ -499,19 +394,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>32.88</td>\n",
        "      <td>3.00</td>\n",
        "      <td>5.92</td>\n",
        "      <td>124.42</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>118.50</td>\n",
        "      <td>4.76</td>\n",
        "      <td>5.92</td>\n",
@@ -519,19 +405,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>55.23</td>\n",
        "      <td>5.00</td>\n",
        "      <td>12.09</td>\n",
        "      <td>253.85</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>241.76</td>\n",
        "      <td>4.76</td>\n",
        "      <td>12.09</td>\n",
@@ -539,19 +416,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>77.94</td>\n",
        "      <td>8.00</td>\n",
        "      <td>22.45</td>\n",
        "      <td>471.35</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>448.90</td>\n",
        "      <td>4.76</td>\n",
        "      <td>22.45</td>\n",
@@ -559,19 +427,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>99.96</td>\n",
        "      <td>10.00</td>\n",
        "      <td>49.65</td>\n",
        "      <td>1042.65</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>993.00</td>\n",
        "      <td>4.76</td>\n",
        "      <td>49.65</td>\n",
@@ -582,44 +441,25 @@
        "</div>"
       ],
       "text/plain": [
-       "         Invoice ID Branch    City Customer type  Gender         Product line  \\\n",
-       "count          1000   1000    1000          1000    1000                 1000   \n",
-       "unique         1000      3       3             2       2                    6   \n",
-       "top     750-67-8428      A  Yangon        Member  Female  Fashion accessories   \n",
-       "freq              1    340     340           501     501                  178   \n",
-       "mean            NaN    NaN     NaN           NaN     NaN                  NaN   \n",
-       "std             NaN    NaN     NaN           NaN     NaN                  NaN   \n",
-       "min             NaN    NaN     NaN           NaN     NaN                  NaN   \n",
-       "25%             NaN    NaN     NaN           NaN     NaN                  NaN   \n",
-       "50%             NaN    NaN     NaN           NaN     NaN                  NaN   \n",
-       "75%             NaN    NaN     NaN           NaN     NaN                  NaN   \n",
-       "max             NaN    NaN     NaN           NaN     NaN                  NaN   \n",
+       "       Unit price  Quantity   Tax 5%    Total     cogs  \\\n",
+       "count     1000.00   1000.00  1000.00  1000.00  1000.00   \n",
+       "mean        55.67      5.51    15.38   322.97   307.59   \n",
+       "std         26.49      2.92    11.71   245.89   234.18   \n",
+       "min         10.08      1.00     0.51    10.68    10.17   \n",
+       "25%         32.88      3.00     5.92   124.42   118.50   \n",
+       "50%         55.23      5.00    12.09   253.85   241.76   \n",
+       "75%         77.94      8.00    22.45   471.35   448.90   \n",
+       "max         99.96     10.00    49.65  1042.65   993.00   \n",
        "\n",
-       "        Unit price  Quantity   Tax 5%    Total      Date   Time  Payment  \\\n",
-       "count      1000.00   1000.00  1000.00  1000.00      1000   1000     1000   \n",
-       "unique         NaN       NaN      NaN      NaN        89    506        3   \n",
-       "top            NaN       NaN      NaN      NaN  2/7/2019  19:48  Ewallet   \n",
-       "freq           NaN       NaN      NaN      NaN        20      7      345   \n",
-       "mean         55.67      5.51    15.38   322.97       NaN    NaN      NaN   \n",
-       "std          26.49      2.92    11.71   245.89       NaN    NaN      NaN   \n",
-       "min          10.08      1.00     0.51    10.68       NaN    NaN      NaN   \n",
-       "25%          32.88      3.00     5.92   124.42       NaN    NaN      NaN   \n",
-       "50%          55.23      5.00    12.09   253.85       NaN    NaN      NaN   \n",
-       "75%          77.94      8.00    22.45   471.35       NaN    NaN      NaN   \n",
-       "max          99.96     10.00    49.65  1042.65       NaN    NaN      NaN   \n",
-       "\n",
-       "           cogs  gross margin percentage  gross income   Rating  \n",
-       "count   1000.00                  1000.00       1000.00  1000.00  \n",
-       "unique      NaN                      NaN           NaN      NaN  \n",
-       "top         NaN                      NaN           NaN      NaN  \n",
-       "freq        NaN                      NaN           NaN      NaN  \n",
-       "mean     307.59                     4.76         15.38     6.97  \n",
-       "std      234.18                     0.00         11.71     1.72  \n",
-       "min       10.17                     4.76          0.51     4.00  \n",
-       "25%      118.50                     4.76          5.92     5.50  \n",
-       "50%      241.76                     4.76         12.09     7.00  \n",
-       "75%      448.90                     4.76         22.45     8.50  \n",
-       "max      993.00                     4.76         49.65    10.00  "
+       "       gross margin percentage  gross income   Rating  \n",
+       "count                  1000.00       1000.00  1000.00  \n",
+       "mean                      4.76         15.38     6.97  \n",
+       "std                       0.00         11.71     1.72  \n",
+       "min                       4.76          0.51     4.00  \n",
+       "25%                       4.76          5.92     5.50  \n",
+       "50%                       4.76         12.09     7.00  \n",
+       "75%                       4.76         22.45     8.50  \n",
+       "max                       4.76         49.65    10.00  "
       ]
      },
      "execution_count": 8,
@@ -628,7 +468,7 @@
     }
    ],
    "source": [
-    "df.describe(include='all').round(2)"
+    "df.describe().round(2)"
    ]
   },
   {
