Updated further explorations

--- a/Supermarket_data_exploration.ipynb
+++ b/Supermarket_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3632825c-851d-4420-aa62-c6ec59c390cb",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5e008f30-d308-4782-9e13-5652f781bc95",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "eec865f1-e316-4a0f-b6cf-dee0d57862f0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f2789ec5-3298-4bf5-8759-72f17812709b",
    "metadata": {},
    "outputs": [],
@@ -622,6 +622,7 @@
    "cell_type": "markdown",
    "id": "afb4e32d-4121-48df-80de-a30da7afa375",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1182,6 +1183,7 @@
    "cell_type": "markdown",
    "id": "b61b10c3-81d7-4519-a7f8-a34b85559f0c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1806,6 +1808,7 @@
    "cell_type": "markdown",
    "id": "53b63c70-ae7c-4b56-a392-4eca516f5e2e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2121,6 +2124,7 @@
    "cell_type": "markdown",
    "id": "4bffc8b7-a98a-46e2-adf1-22cc7ffa523d",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2506,6 +2510,7 @@
    "cell_type": "markdown",
    "id": "aa3c984b-4921-44cb-b5fa-68064afe8de2",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2516,6 +2521,7 @@
    "cell_type": "markdown",
    "id": "d69bd524-7006-452e-980b-0d5a03ee008d",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2951,6 +2957,7 @@
    "cell_type": "markdown",
    "id": "4fc53d61-ba72-403f-ad19-b6f45ef43472",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3776,6 +3783,7 @@
    "cell_type": "markdown",
    "id": "d50b4fda-100d-4698-968f-222dfcff1d29",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -7700,6 +7708,22 @@
     "\n",
     "* \"Product line\",\"Unit price\",\"Branch\",\"Payment\",\"Customer type\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e2e7b03-bbf4-4ff7-a756-081323c8b0a8",
+   "metadata": {},
+   "source": [
+    "# Further exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5e9975f-a52f-4b38-a1ad-ed168b99f080",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
